# solitaireGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FetchFTXUI.cmake
src/: board.cpp  main.cpp  render.cpp
src/hdr/: board.hpp  render.hpp
